--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/fullpage.min.js"></script>
 <script src="js/jquery.circliful.min.js"></script>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .kiri {
     float: left; }
