--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </title>
 
 <link href="css/jquery.circliful.css" rel="stylesheet" type="text/css" />
-<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+<!--<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />-->
 <link href="css/fullpage.css" rel="stylesheet" type="text/css" />
 <link href="css/reset.css" rel="stylesheet" type="text/css" />
 
