--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 
 
-<script async='async' src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script async='async' src="js/fullpage.min.js"></script>
-<script async='async' src="js/jquery.circliful.min.js"></script>
+<script  src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script  src="js/fullpage.min.js"></script>
+<script' src="js/jquery.circliful.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .kiri {
