--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ body {
     font-family: arial,verdana, sans-serif;
     font-size: 12px;
 }
-
+.sl {
+max-width:90%;padding-top:15%;margin:0 10%;}
 
 </style>
 </head>
@@ -77,7 +78,7 @@ body {
 <div class="section" id="section3">
  
 
-<div style="max-width:90%;padding-top:15%;margin:0 10%;">
+<div class="sl" >
     <div id="myStat1" class="kiri" data-dimension="250" data-text="80%" data-info="Skill" data-width="30" data-fontsize="38" data-percent="80" data-fgcolor="#61a9dc" data-bgcolor="#eee"><h1>Skill</h1></div>        
     <div id="myStat2" class="kiri" data-dimension="250" data-text="20%" data-info="Mampet" data-width="30" data-fontsize="38" data-percent="20" data-fgcolor="#61a9dc" data-bgcolor="#eee"><h1>Mampet</h1></div>
     <div id="myStat3" class="kiri" data-dimension="250" data-text="85%" data-info="Team Work" data-width="30" data-fontsize="38" data-percent="85" data-fgcolor="#61a9dc" data-bgcolor="#eee"><h1>Team Work</h1></div>
