--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <script  src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script  src="js/fullpage.min.js"></script>
-<script' src="js/jquery.circliful.min.js"></script>
+<script src="js/jquery.circliful.min.js"></script>
 
 <style>
 .kiri {
