--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>
         Indo Bluish&trade;
 </title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width", initial-scale="1">
 
 
 
@@ -114,3 +114,4 @@ $( window ).bind("load", function() {
 <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 <link href="css/fullpage.css" rel="stylesheet" type="text/css" />
 <link href="css/reset.css" rel="stylesheet" type="text/css" />
+
